k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devboard-backend-deployment
  namespace: devboard
  labels:
    app: devboard-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devboard-backend
  template:
    metadata:
      labels:
        app: devboard-backend
    spec:
      containers:
      - name: devboard-backend
        image: trainwithshubham/devboard-backend:sha-4945e5b
        ports:
          - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10

        readinessProbe: 
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10   

        resources:
          requests:
            cpu: 10m
            memory: 64Mi
          limits:
            cpu: 250m
            memory: 192Mi
